DotAligner v2: STEP 1: global alignment (Needleman-Wunsch algorithm) of sequences by scoring sequence similarity and unpaired probabilities STEP 2: get suboptimal sequence/unpaired probability alignment by probabilistic backtracking through scoring matrix STEP 3: get similarity of pairs of dotplots corresponding to suboptimal alignment

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,21 +2,21 @@ CXX = g++
 #CXXFLAGS = -Wall -ansi -pedantic -O3 -g --std=c++0x
 CXXFLAGS = -Wall -ansi -pedantic -O0 -g --std=c++0x #debug mode
 LDFLAGS = -Wl,-rpath,/usr/local/lib
-OBJECTS = main.o nwdp.o
+OBJECTS = main_v2.o nwdp_v2.o
 BINPATH = ../bin
 #DPALIGNPATH = /media/data/phd/projects/DotAligner/src
 
-all: $(BINPATH)/DotAligner Makefile
+all: $(BINPATH)/DotAligner2 Makefile
 
-$(BINPATH)/DotAligner: Makefile $(OBJECTS) 
-		$(CXX) -o $(BINPATH)/DotAligner $(LDFLAGS) $(OBJECTS)
+$(BINPATH)/DotAligner2: Makefile $(OBJECTS) 
+		$(CXX) -o $(BINPATH)/DotAligner2 $(LDFLAGS) $(OBJECTS)
 
-main.o: main.cpp
-		$(CXX) $(CXXFLAGS) -c main.cpp
-nwdp.o: nwdp.cpp
-		$(CXX) $(CXXFLAGS) -c nwdp.cpp
+main_v2.o: main_v2.cpp
+		$(CXX) $(CXXFLAGS) -c main_v2.cpp
+nwdp_v2.o: nwdp_v2.cpp
+		$(CXX) $(CXXFLAGS) -c nwdp_v2.cpp
 
 clean: 
-		rm -f -v *.o $(BINPATH)/DotAligner
+		rm -f -v *.o $(BINPATH)/DotAligner2
 
 .PHONY: clean
